# fish-server

./: .gitignore  manage.py  pyproject.toml
app/: app.py  models.py  routes.py
app/endpoints/: admin.py  web.py
app/extensions/: __init__.py
app/middlewares/: __init__.py
common/: app.py  base_endpoints.py  exceptions.py  prometheus.py
common/extensions/: jwtext.py
common/middlewares/: base.py  exception.py
settings/: __init__.py
